fix(app): Small fixes and improvements
* (collect) Added updated_at date
* Added piece validation functionality
* Added some tooltips
* Added mak3r_num and telegram link at info page
* Fixed some ios menu icons typo error
* Fixed safari ios autofocus

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,13 +21,13 @@
           <ng-container *ngIf="!core.isLoggedIn">
             <ion-menu-toggle auto-hide="false">
               <ion-item routerDirection="root" routerLink="/login" lines="none" detail="false" routerLinkActive="selected">
-                <ion-icon slot="start" ios="key-outline'" md="key-sharp"></ion-icon>
+                <ion-icon slot="start" ios="key-outline" md="key-sharp"></ion-icon>
                 <ion-label>Iniciar sesión</ion-label>
               </ion-item>
             </ion-menu-toggle>
             <ion-menu-toggle auto-hide="false">
               <ion-item routerDirection="root" routerLink="/register" lines="none" detail="false" routerLinkActive="selected">
-                <ion-icon slot="start" ios="person-add-outline'" md="person-add-sharp"></ion-icon>
+                <ion-icon slot="start" ios="person-add-outline" md="person-add-sharp"></ion-icon>
                 <ion-label>Register</ion-label>
               </ion-item>
             </ion-menu-toggle>
