--- a/src/app/pages/community-module/components/updatestock/updatestock.html
+++ b/src/app/pages/community-module/components/updatestock/updatestock.html
@@ -24,7 +24,7 @@
     </ion-item>
     <ion-item>
       <ion-label>Nº Total fabricadas</ion-label>
-      <ion-input autofocus="autofocus" type="number" (ionBlur)="validate()" [(ngModel)]="newStock" [min]="getMin"></ion-input>
+      <ion-input type="number" (ionBlur)="validate()" [(ngModel)]="newStock" [min]="getMin"></ion-input>
     </ion-item>
   </ion-list>
 
