--- a/src/app/pages/community-module/pages/detail/tabs/collect/collect.html
+++ b/src/app/pages/community-module/pages/detail/tabs/collect/collect.html
@@ -38,7 +38,7 @@
           <h2>{{collect.user_name}}   <small>{{collect.user_alias}}</small> - MK#{{collect.mak3r_num}}</h2>
           <p>
             Total piezas: {{collect.pieces|totalunits}} | Total materiales: {{collect.materials|totalunits}}<br>
-            Fecha: {{collect.created_at|datetime}}
+            Fecha: {{collect.created_at|datetime}} | Modificación: {{collect.updated_at|datetime}}
           </p>
         </ion-label>
       </ion-item>
