--- a/src/app/pages/community-module/pages/detail/tabs/pieces/pieces.html
+++ b/src/app/pages/community-module/pages/detail/tabs/pieces/pieces.html
@@ -23,6 +23,7 @@
         <ion-card-title>
           {{piece.name}}
           <ion-button *ngIf="piece.validated_at" fill="outline" size="small" color="success" style="transform: translateY(-5px)">VALIDADA</ion-button>
+          <ion-button *ngIf="!piece.validated_at" fill="outline" size="small" color="danger" style="transform: translateY(-5px)">NO VALIDADA</ion-button>
         </ion-card-title>
         <ion-card-subtitle>
           Comunidad -> Fabricadas: {{piece.units_manufactured}} | Recibidas: {{piece.units_collected}} | Stock: {{piece.units_manufactured-piece.units_collected}}
