Add name user in menu

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,6 +20,12 @@ ion-menu {
       margin-bottom: 30px;
     }
 
+    hr {
+      border: 0.1px solid rgb(78, 78, 78);
+      margin: 10px 0;
+      width: 100%;
+    }
+
     ion-list-header,
     ion-note {
       padding-left: 10px;
