--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,17 @@
             </ion-label>
           </ion-item>
 
+          <ng-container *ngIf="core.isLoggedIn">
+            <ion-item color="primary" style="margin-bottom: 10px;">
+              <ion-icon slot="start" color="dark" name="person-circle-outline"></ion-icon>
+              <ion-label text-wrap style="--color: white; font-weight: bold;">
+                {{core.auth.user.name}}
+              </ion-label>
+            </ion-item>
+  
+            <hr/>
+          </ng-container>
+
           <ng-container *ngFor="let p of appPages">
             <ion-menu-toggle auto-hide="false" *ngIf="p.requireLogin ? core.isLoggedIn:true">
               <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
