feat(app): Added:
* Mak3r select component
* Filter by mak3rs
* Filters added to collect and csv exports
* Created (hidden) page sendmessage
* Some small fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,12 +18,12 @@
 
           <ng-container *ngIf="core.isLoggedIn">
             <ion-item color="primary" style="margin-bottom: 10px;">
-              <ion-icon slot="start" color="dark" name="person-circle-outline"></ion-icon>
-              <ion-label text-wrap style="--color: white; font-weight: bold;">
+              <ion-icon slot="start" color="white" name="person-circle-outline"></ion-icon>
+              <ion-label text-wrap color="white" style="font-weight: bold;">
                 {{core.auth.user.name}}
               </ion-label>
             </ion-item>
-  
+
             <hr/>
           </ng-container>
 
