--- a/src/app/pages/community-module/pages/detail/tabs/collect/collect.html
+++ b/src/app/pages/community-module/pages/detail/tabs/collect/collect.html
@@ -60,6 +60,9 @@
   </ng-container>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed" *ngIf="adminPermission && query">
+    <ion-fab-button (click)="filter()" style="margin-bottom: 10px;">
+      <ion-icon name="funnel-outline"></ion-icon>
+    </ion-fab-button>
     <ion-fab-button (click)="csvExport()">
       <ion-icon name="save-outline"></ion-icon>
     </ion-fab-button>
