--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
             </ion-label>
           </ion-item>
 
-          <ng-container *ngIf="core.isLoggedIn">
+          <ng-container *ngIf="core.isLoggedIn && core.auth.user">
             <ion-item color="primary" style="margin-bottom: 10px;">
               <ion-icon slot="start" color="white" name="person-circle-outline"></ion-icon>
               <ion-label text-wrap color="white" style="font-weight: bold;">
