--- a/src/app/pages/community-module/components/filters/filters.html
+++ b/src/app/pages/community-module/components/filters/filters.html
@@ -37,7 +37,7 @@
   </ng-container>
 
   <ng-container *ngIf="config.bymak3r">
-    <h2>Filtrar por pieza</h2>
+    <h2>Filtrar por mak3r</h2>
     <ion-item>
       <ion-label>Seleccione los mak3rs a filtrar</ion-label>
       <cmtp-mak3r-select [(selectedItems)]="data['mak3r']" [config]="{multiple: true, community_alias: config.community_alias}"></cmtp-mak3r-select>
